# src/api/controller/doc/swagger.json
@@ -9,12 +9,20 @@
   "basePath": "/",
   "tags": [
     {
+      "name": "Autorização",
+      "description": "Gerencia o fluxo de autorização de acesso."
+    },
+    {
       "name": "Permissões",
       "description": "Gerencia o cadastro de permissões."
     },
     {
       "name": "Usuários",
       "description": "Gerencia o cadastro de usuários."
+    },
+    {
+      "name": "UsuáriosPermissões",
+      "description": "Gerencia o cadastro de permissões do usuário."
     }
   ],
   "schemes": [
@@ -67,7 +75,7 @@
     "/v1/usuarios/token": {
       "post": {
         "tags": [
-          "Usuários"
+          "Autorização"
         ],
         "description": "Gerar token de acesso para o usuário.",
         "parameters": [
@@ -86,6 +94,150 @@
               "$ref": "#/definitions/UsuarioAutenticado"
             },
             "description": "Usuário autenticado."
+          },
+          "401": {
+            "schema": {
+              "$ref": "#/definitions/Error401"
+            },
+            "description": "Não autorizado."
+          },
+          "403": {
+            "schema": {
+              "$ref": "#/definitions/Error403"
+            },
+            "description": "Sem premissão."
+          },
+          "409": {
+            "schema": {
+              "$ref": "#/definitions/Error409"
+            },
+            "description": "Duplicidade de dados."
+          },
+          "500": {
+            "schema": {
+              "$ref": "#/definitions/Error500"
+            },
+            "description": "Erro interno."
+          }
+        }
+      }
+    },
+    "/v1/usuarios/sem-senha": {
+      "post": {
+        "tags": [
+          "Autorização"
+        ],
+        "description": "Cadastrar um usuário com senha.",
+        "parameters": [
+          {
+            "name": "UsuarioSemSenha",
+            "in": "body",
+            "description": "Cadastrar usuário sem senha.",
+            "schema": {
+              "$ref": "#/definitions/UsuarioSemSenha"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Informativo"
+            },
+            "description": "Usuário cadastrado."
+          },
+          "401": {
+            "schema": {
+              "$ref": "#/definitions/Error401"
+            },
+            "description": "Não autorizado."
+          },
+          "403": {
+            "schema": {
+              "$ref": "#/definitions/Error403"
+            },
+            "description": "Sem premissão."
+          },
+          "409": {
+            "schema": {
+              "$ref": "#/definitions/Error409"
+            },
+            "description": "Duplicidade de dados."
+          },
+          "500": {
+            "schema": {
+              "$ref": "#/definitions/Error500"
+            },
+            "description": "Erro interno."
+          }
+        }
+      }
+    },
+    "/v1/usuarios/validar-acesso": {
+      "put": {
+        "tags": [
+          "Autorização"
+        ],
+        "description": "Valida o acesso do usuário a partir do código recebido por e-mail.",
+        "parameters": [
+          {
+            "name": "ValidarUsuario",
+            "in": "body",
+            "description": "Cadastrar usuário com senha.",
+            "schema": {
+              "$ref": "#/definitions/ValidarUsuario"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Usuario"
+            },
+            "description": "Usuário validado."
+          },
+          "401": {
+            "schema": {
+              "$ref": "#/definitions/Error401"
+            },
+            "description": "Não autorizado."
+          },
+          "403": {
+            "schema": {
+              "$ref": "#/definitions/Error403"
+            },
+            "description": "Sem premissão."
+          },
+          "500": {
+            "schema": {
+              "$ref": "#/definitions/Error500"
+            },
+            "description": "Erro interno."
+          }
+        }
+      }
+    },
+    "/v1/usuarios/recuperar-acesso": {
+      "put": {
+        "tags": [
+          "Autorização"
+        ],
+        "description": "Recupear a senha rebendo um código de acesso por email.",
+        "parameters": [
+          {
+            "name": "EmailUsuario",
+            "in": "body",
+            "description": "Receber um códifo por e-mail para validar acesso.",
+            "schema": {
+              "$ref": "#/definitions/EmailUsuario"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "schema": {
+              "$ref": "#/definitions/Informativo"
+            },
+            "description": "Código de acesso enviado."
           },
           "401": {
             "schema": {
@@ -180,56 +332,6 @@
           "201": {
             "schema": {
               "$ref": "#/definitions/Usuario"
-            },
-            "description": "Usuário cadastrado."
-          },
-          "401": {
-            "schema": {
-              "$ref": "#/definitions/Error401"
-            },
-            "description": "Não autorizado."
-          },
-          "403": {
-            "schema": {
-              "$ref": "#/definitions/Error403"
-            },
-            "description": "Sem premissão."
-          },
-          "409": {
-            "schema": {
-              "$ref": "#/definitions/Error409"
-            },
-            "description": "Duplicidade de dados."
-          },
-          "500": {
-            "schema": {
-              "$ref": "#/definitions/Error500"
-            },
-            "description": "Erro interno."
-          }
-        }
-      }
-    },
-    "/v1/usuarios/sem-senha": {
-      "post": {
-        "tags": [
-          "Usuários"
-        ],
-        "description": "Cadastrar um usuário com senha.",
-        "parameters": [
-          {
-            "name": "UsuarioSemSenha",
-            "in": "body",
-            "description": "Cadastrar usuário sem senha.",
-            "schema": {
-              "$ref": "#/definitions/UsuarioSemSenha"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "schema": {
-              "$ref": "#/definitions/Informativo"
             },
             "description": "Usuário cadastrado."
           },
@@ -437,7 +539,7 @@
     "/v1/usuarios/{id}/permissoes": {
       "get": {
         "tags": [
-          "Usuários"
+          "UsuáriosPermissões"
         ],
         "description": "Lista de todas permissões do usuário.",
         "parameters": [
@@ -467,100 +569,6 @@
               "$ref": "#/definitions/Error403"
             },
             "description": "Sem premissão."
-          },
-          "500": {
-            "schema": {
-              "$ref": "#/definitions/Error500"
-            },
-            "description": "Erro interno."
-          }
-        }
-      }
-    },
-    "/v1/usuarios/validar-acesso": {
-      "put": {
-        "tags": [
-          "Usuários"
-        ],
-        "description": "Valida o acesso do usuário a partir do código recebido por e-mail.",
-        "parameters": [
-          {
-            "name": "ValidarUsuario",
-            "in": "body",
-            "description": "Cadastrar usuário com senha.",
-            "schema": {
-              "$ref": "#/definitions/ValidarUsuario"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "schema": {
-              "$ref": "#/definitions/Usuario"
-            },
-            "description": "Usuário validado."
-          },
-          "401": {
-            "schema": {
-              "$ref": "#/definitions/Error401"
-            },
-            "description": "Não autorizado."
-          },
-          "403": {
-            "schema": {
-              "$ref": "#/definitions/Error403"
-            },
-            "description": "Sem premissão."
-          },
-          "500": {
-            "schema": {
-              "$ref": "#/definitions/Error500"
-            },
-            "description": "Erro interno."
-          }
-        }
-      }
-    },
-    "/v1/usuarios/recuperar-acesso": {
-      "put": {
-        "tags": [
-          "Usuários"
-        ],
-        "description": "Recupear a senha rebendo um código de acesso por email.",
-        "parameters": [
-          {
-            "name": "EmailUsuario",
-            "in": "body",
-            "description": "Receber um códifo por e-mail para validar acesso.",
-            "schema": {
-              "$ref": "#/definitions/EmailUsuario"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "schema": {
-              "$ref": "#/definitions/Informativo"
-            },
-            "description": "Código de acesso enviado."
-          },
-          "401": {
-            "schema": {
-              "$ref": "#/definitions/Error401"
-            },
-            "description": "Não autorizado."
-          },
-          "403": {
-            "schema": {
-              "$ref": "#/definitions/Error403"
-            },
-            "description": "Sem premissão."
-          },
-          "409": {
-            "schema": {
-              "$ref": "#/definitions/Error409"
-            },
-            "description": "Duplicidade de dados."
           },
           "500": {
             "schema": {
