# src/api/routes/index.js
@@ -15,7 +15,7 @@ const usuarioController = new UsuarioController();
 
 routes.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
 
-//#region Permissão
+//#region CRUD Permissão
 
 routes.get(`/v1/permissoes`, asyncHandler(async (request, response) => {
     // #swagger.tags = ['Permissões']
@@ -47,12 +47,12 @@ routes.get(`/v1/permissoes`, asyncHandler(async (request, response) => {
     return await permissaoController.todasPermissoes(request, response);
 }));
 
-//#endregion
+//#endregion CRUD Permissão
 
-//#region Usuário
+//#region Fluxo de Autorização
 
 routes.post(`/v1/usuarios/token`, asyncHandler(async (request, response) => {
-    // #swagger.tags = ['Usuários']
+    // #swagger.tags = ['Autorização']
     // #swagger.description = 'Gerar token de acesso para o usuário.'
 
     /*  #swagger.parameters['UsuarioLogin'] = {
@@ -92,6 +92,130 @@ routes.post(`/v1/usuarios/token`, asyncHandler(async (request, response) => {
      */
     return await usuarioController.login(request, response);
 }));
+
+routes.post(`/v1/usuarios/sem-senha`, asyncHandler(async (request, response) => {
+    // #swagger.tags = ['Autorização']
+    // #swagger.description = 'Cadastrar um usuário com senha.'
+
+    /*  #swagger.parameters['UsuarioSemSenha'] = {
+        in: 'body',
+        description: 'Cadastrar usuário sem senha.',
+        schema: { $ref: '#/definitions/UsuarioSemSenha' }
+    } */
+
+    /** #swagger.responses[200] = {
+        schema: { $ref: "#/definitions/Informativo" },
+        description: 'Usuário cadastrado.' 
+     } 
+    */
+
+    /** #swagger.responses[401] = {
+        schema: { $ref: "#/definitions/Error401" },
+        description: 'Não autorizado.' 
+     } 
+    */
+
+    /** #swagger.responses[403] = {
+        schema: { $ref: "#/definitions/Error403" },
+        description: 'Sem premissão.' 
+     } 
+    */
+
+    /** #swagger.responses[409] = {
+        schema: { $ref: "#/definitions/Error409" },
+        description: 'Duplicidade de dados.' 
+     } 
+    */
+
+    /** #swagger.responses[500] = {
+        schema: { $ref: "#/definitions/Error500" },
+        description: 'Erro interno.' 
+     }
+     */
+    return await usuarioController.cadastrarUsuarioSemSenha(request, response);
+}));
+
+routes.put(`/v1/usuarios/validar-acesso`, asyncHandler(async (request, response) => {
+    // #swagger.tags = ['Autorização']
+    // #swagger.description = 'Valida o acesso do usuário a partir do código recebido por e-mail.'
+
+    /*  #swagger.parameters['ValidarUsuario'] = {
+        in: 'body',
+        description: 'Cadastrar usuário com senha.',
+        schema: { $ref: '#/definitions/ValidarUsuario' }
+    } */
+
+    /** #swagger.responses[200] = {
+        schema: { $ref: "#/definitions/Usuario" },
+        description: 'Usuário validado.' 
+     } 
+    */
+
+    /** #swagger.responses[401] = {
+        schema: { $ref: "#/definitions/Error401" },
+        description: 'Não autorizado.' 
+     } 
+    */
+
+    /** #swagger.responses[403] = {
+        schema: { $ref: "#/definitions/Error403" },
+        description: 'Sem premissão.' 
+     } 
+    */
+
+    /** #swagger.responses[500] = {
+        schema: { $ref: "#/definitions/Error500" },
+        description: 'Erro interno.' 
+     }
+     */
+    return await usuarioController.cadastrarSenhaComCodigo(request, response);
+}));
+
+routes.put(`/v1/usuarios/recuperar-acesso`, asyncHandler(async (request, response) => {
+    // #swagger.tags = ['Autorização']
+    // #swagger.description = 'Recupear a senha rebendo um código de acesso por email.'
+
+    /*  #swagger.parameters['EmailUsuario'] = {
+        in: 'body',
+        description: 'Receber um códifo por e-mail para validar acesso.',
+        schema: { $ref: '#/definitions/EmailUsuario' }
+    } */
+
+    /** #swagger.responses[200] = {
+        schema: { $ref: "#/definitions/Informativo" },
+        description: 'Código de acesso enviado.' 
+     } 
+    */
+
+    /** #swagger.responses[401] = {
+        schema: { $ref: "#/definitions/Error401" },
+        description: 'Não autorizado.' 
+     } 
+    */
+
+    /** #swagger.responses[403] = {
+        schema: { $ref: "#/definitions/Error403" },
+        description: 'Sem premissão.' 
+     } 
+    */
+
+    /** #swagger.responses[409] = {
+        schema: { $ref: "#/definitions/Error409" },
+        description: 'Duplicidade de dados.' 
+     } 
+    */
+
+    /** #swagger.responses[500] = {
+        schema: { $ref: "#/definitions/Error500" },
+        description: 'Erro interno.' 
+     }
+     */
+    return await usuarioController.enviarCodigoAcessoParaEmail(request, response);
+}));
+
+//#endregion Fluxo de Autorização
+
+//#region CRUD Usuário
 
 routes.get(`/v1/usuarios`, auth, asyncHandler(async (request, response) => {
     // #swagger.tags = ['Usuários']
@@ -168,48 +292,6 @@ routes.post(`/v1/usuarios/com-senha`, asyncHandler(async (request, response) => 
      }
      */
     return await usuarioController.cadastrarUsuarioComSenha(request, response);
-}));
-
-routes.post(`/v1/usuarios/sem-senha`, asyncHandler(async (request, response) => {
-    // #swagger.tags = ['Usuários']
-    // #swagger.description = 'Cadastrar um usuário com senha.'
-
-    /*  #swagger.parameters['UsuarioSemSenha'] = {
-        in: 'body',
-        description: 'Cadastrar usuário sem senha.',
-        schema: { $ref: '#/definitions/UsuarioSemSenha' }
-    } */
-
-    /** #swagger.responses[200] = {
-        schema: { $ref: "#/definitions/Informativo" },
-        description: 'Usuário cadastrado.' 
-     } 
-    */
-
-    /** #swagger.responses[401] = {
-        schema: { $ref: "#/definitions/Error401" },
-        description: 'Não autorizado.' 
-     } 
-    */
-
-    /** #swagger.responses[403] = {
-        schema: { $ref: "#/definitions/Error403" },
-        description: 'Sem premissão.' 
-     } 
-    */
-
-    /** #swagger.responses[409] = {
-        schema: { $ref: "#/definitions/Error409" },
-        description: 'Duplicidade de dados.' 
-     } 
-    */
-
-    /** #swagger.responses[500] = {
-        schema: { $ref: "#/definitions/Error500" },
-        description: 'Erro interno.' 
-     }
-     */
-    return await usuarioController.cadastrarUsuarioSemSenha(request, response);
 }));
 
 routes.get(`/v1/usuarios/:id`, asyncHandler(async (request, response) => {
@@ -337,8 +419,12 @@ routes.put(`/v1/usuarios/ativa/:id`, asyncHandler(async (request, response) => {
     return await usuarioController.ativarUsuario(request, response);
 }));
 
+//#endregion CRUD Usuário
+
+//#region Controla as permissões do usuário
+
 routes.get(`/v1/usuarios/:id/permissoes`, asyncHandler(async (request, response) => {
-    // #swagger.tags = ['Usuários']
+    // #swagger.tags = ['UsuáriosPermissões']
     // #swagger.description = 'Lista de todas permissões do usuário.'
     
     // #swagger.parameters['id'] = { description: 'Id do usuário.' }
@@ -370,84 +456,6 @@ routes.get(`/v1/usuarios/:id/permissoes`, asyncHandler(async (request, response)
     return await usuarioController.todasPermissoesDoUsuario(request, response);
 }));
 
-routes.put(`/v1/usuarios/validar-acesso`, asyncHandler(async (request, response) => {
-    // #swagger.tags = ['Usuários']
-    // #swagger.description = 'Valida o acesso do usuário a partir do código recebido por e-mail.'
-
-    /*  #swagger.parameters['ValidarUsuario'] = {
-        in: 'body',
-        description: 'Cadastrar usuário com senha.',
-        schema: { $ref: '#/definitions/ValidarUsuario' }
-    } */
-
-    /** #swagger.responses[200] = {
-        schema: { $ref: "#/definitions/Usuario" },
-        description: 'Usuário validado.' 
-     } 
-    */
-
-    /** #swagger.responses[401] = {
-        schema: { $ref: "#/definitions/Error401" },
-        description: 'Não autorizado.' 
-     } 
-    */
-
-    /** #swagger.responses[403] = {
-        schema: { $ref: "#/definitions/Error403" },
-        description: 'Sem premissão.' 
-     } 
-    */
-
-    /** #swagger.responses[500] = {
-        schema: { $ref: "#/definitions/Error500" },
-        description: 'Erro interno.' 
-     }
-     */
-    return await usuarioController.cadastrarSenhaComCodigo(request, response);
-}));
-
-routes.put(`/v1/usuarios/recuperar-acesso`, asyncHandler(async (request, response) => {
-    // #swagger.tags = ['Usuários']
-    // #swagger.description = 'Recupear a senha rebendo um código de acesso por email.'
-
-    /*  #swagger.parameters['EmailUsuario'] = {
-        in: 'body',
-        description: 'Receber um códifo por e-mail para validar acesso.',
-        schema: { $ref: '#/definitions/EmailUsuario' }
-    } */
-
-    /** #swagger.responses[200] = {
-        schema: { $ref: "#/definitions/Informativo" },
-        description: 'Código de acesso enviado.' 
-     } 
-    */
-
-    /** #swagger.responses[401] = {
-        schema: { $ref: "#/definitions/Error401" },
-        description: 'Não autorizado.' 
-     } 
-    */
-
-    /** #swagger.responses[403] = {
-        schema: { $ref: "#/definitions/Error403" },
-        description: 'Sem premissão.' 
-     } 
-    */
-
-    /** #swagger.responses[409] = {
-        schema: { $ref: "#/definitions/Error409" },
-        description: 'Duplicidade de dados.' 
-     } 
-    */
-
-    /** #swagger.responses[500] = {
-        schema: { $ref: "#/definitions/Error500" },
-        description: 'Erro interno.' 
-     }
-     */
-    return await usuarioController.enviarCodigoAcessoParaEmail(request, response);
-}));
-
-//#endregion
+//#endregion Controla as permissões do usuário
 
 export { routes }
